# update-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
docs/: README.md  package-lock.json  package.json
docs/.vuepress/: config.ts
docs/guide/: README.md  how-it-works.md  release-pipeline.md  usage.md  windows.md
examples/windows-manifest/: README.md  app.exe.manifest  build.rs
src/: cmd.rs  errors.rs  fs.rs  github.rs  glob.rs  http.rs  lib.rs  log.rs  manager.rs  naming.rs  release.rs  state.rs
src/source/: github.rs  mod.rs
