[package]
name = "update-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Self-contained, three-phase in-place self-updates for Rust applications."
authors = ["Sierra Softworks <contact@sierrasoftworks.com>"]
license = "MIT"
repository = "https://github.com/SierraSoftworks/update-rs"
homepage = "https://github.com/SierraSoftworks/update-rs"
documentation = "https://docs.rs/update-rs"
readme = "README.md"
keywords = ["self-update", "updater", "github", "release", "autoupdate"]
categories = ["development-tools"]
exclude = [".github/", "assets/", "docs/", "examples/", "AGENTS.md", "CLAUDE.md"]

[lib]
name = "update_rs"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
human-errors = "0.2.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tokio = { version = "1.0", features = ["fs", "time"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.14"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
