[package]
name = "update-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Self-contained, three-phase in-place self-updates for Rust applications."
authors = ["Sierra Softworks <contact@sierrasoftworks.com>"]
license = "MIT"
repository = "https://github.com/SierraSoftworks/update-rs"
homepage = "https://github.com/SierraSoftworks/update-rs"
documentation = "https://docs.rs/update-rs"
readme = "README.md"
keywords = ["self-update", "updater", "github", "release", "autoupdate"]
categories = ["development-tools"]
exclude = [".github/", "assets/", "docs/", "examples/", "AGENTS.md", "CLAUDE.md"]

[lib]
name = "update_rs"

[features]
default = []
# Emit diagnostics through `tracing` instead of the `log` crate, adding
# `#[instrument]` spans and structured events. Without this feature the crate's
# diagnostic events are emitted through the lightweight `log` facade (no spans).
tracing = ["dep:tracing"]
# Propagate the active OpenTelemetry trace context across the relaunch boundary
# by carrying it inside the serialized `UpdateState`, so the three update phases
# — which each run in a separate process — stitch together into a single
# distributed trace. Only the *global* propagator is used, so the crate stays
# engine-agnostic. Implies `tracing`.
opentelemetry = ["tracing", "dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
human-errors = "0.2.3"
# The baseline logging facade: diagnostics are emitted through `log` unless the
# `tracing` feature swaps them over to `tracing`. Both are no-ops at runtime
# until the application installs a logger/subscriber.
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tokio = { version = "1.0", features = ["fs", "time"] }
tracing = { version = "0.1", optional = true }
# Pinned to the same major series Git-Tool's telemetry stack uses, so the
# `opentelemetry::global` propagator set by the host is the one this crate reads.
opentelemetry = { version = "0.32", optional = true }
tracing-opentelemetry = { version = "0.33", optional = true, default-features = false }

[dev-dependencies]
mockall = "0.14"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# Exercise the `opentelemetry` feature end-to-end: a real W3C propagator + a
# tracing-opentelemetry layer so we can assert context survives a relaunch.
opentelemetry_sdk = "0.32"
tracing-subscriber = "0.3"

[package.metadata.docs.rs]
all-features = true
